# bottymcbotbot

./: .gitignore  Makefile  README.md  agent_memory.json  pyproject.toml
.github/agents/: main.agent.md
src/: main.py
src/app/: config.py  container.py  pydantic.py
src/app/mcp/v1/: routes.py
src/core/: collection_model.py  exceptions.py
src/core/agent/: agent.py  interfaces.py  memory.py  plan_service.py  providers.py  tool_cache.py
src/core/agent/operations/: create_response_operation.py
src/core/chat/: client.py  models.py
src/core/code/: interfaces.py  models.py  services.py
src/core/code/tools/: add_file.py  list_dir.py  modify_file.py  read_file.py
src/core/interfaces/: chat.py  memory.py  plan.py  tool.py
src/core/plans/: models.py
src/core/plans/use_cases/: __init__.py  add_code_comments_and_explanations.py  build_cli_tool.py  build_ui_components.py  convert_code_language.py  create_a_code_review.py  create_a_readme.py  create_a_unit_test.py  create_boilerplate_code.py  create_dockerfile.py  create_example_api_clients.py  create_openapi_docs.py  design_database_schema.py  (+21 more)
src/entities/: collection.py  plan.py  prompt.py  prompt_category.py  prompt_fork.py  prompt_metrics.py  prompt_star.py  prompt_watcher.py  user.py  user_prompt.py
src/entities/models/: __init__.py  prompt_reference.py
src/libs/: container.py
src/libs/chat/: chat.py  model_adapter.py  types.py
src/libs/chromadb/: client.py
src/libs/disk/: config.py  services.py
src/libs/plans/: chroma_db_plan_repository.py  models.py
tests/unit/: test_tool_cache.py
(+22 files in other folders)
