[project]
name = "bottymcbotbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "loguru>=0.7.3",
    "uvicorn>=0.38.0",
    "wireup>=2.1.0",
    "openai>=1.51.0",
    "ollama>=0.6.1",
    "pydantic-settings>=2.12.0",
    "aiofiles>=23.2.1",
    "google-genai>=1.53.0",
]


[dependency-groups]
dev = [
    "pyright (>=1.1.407,<2.0.0)",
    "ruff (>=0.14.4,<0.15.0)"
]
test = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
